[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solvec"
version = "0.1.0a9"
description = "Python SDK for Recall by VecLabs - cryptographic memory layer for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Dhir Katre", email = "dhirkatre@gmail.com" }
]
keywords = [
  "vector-database", "ai-memory", "solana", "recall",
  "hnsw", "embeddings", "cryptographic", "merkle"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Database",
]
dependencies = [
  "httpx>=0.27.0",
  "cryptography>=42.0.0",
  "pynacl>=1.5.0",
  "base58>=2.1.1",
]

[project.optional-dependencies]
solana = [
  "solders>=0.21.0",
  "solana>=0.34.0",
]
shadow-drive = [
  "solders>=0.21.0",
  "solana>=0.34.0",
  "aiohttp>=3.9.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]
all = ["solvec[solana,shadow-drive,dev]"]

[project.urls]
Homepage = "https://veclabs.xyz"
Documentation = "https://docs.veclabs.xyz"
Repository = "https://github.com/veclabs/veclabs"
Issues = "https://github.com/veclabs/veclabs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
